Make kExposeInternalsForTesting usable again for interactive content_shell.

In https://crrev.com/1763113002 I've tried to separate
layout-test-specific cmdline switches into a separate header file and
handle some of them under
LayoutTestContentBrowserClient::AppendExtraCommandLineSwitches rather
than ShellContentBrowserClient::AppendExtraCommandLineSwitches.  This
was wrong - this meant that devs cannot pass these switches when
debugging via content_shell running in interactive / non-layout-test
mode.

So - the current CL undoes part of https://crrev.com/1763113002 and
restores processing of some of the switches back to
ShellContentBrowserClient:

- kExposeInternalsForTesting - this is useful for debugging layout tests
  (see https://crbug.com/594566).

For now it is okay to leave propagation of the following switches in
LayoutTestContentBrowserClient (because moving them in
https://crrev.com/1763113002 was not a regression as explained below):

- kStableReleaseMode - it only has effect if used together with
  --run-layout-test switch (i.e. see how
  ShellMainDelegate::BasicStartupComplete first checks
  switches::kRunLayoutTest before checking switches::kStableReleaseMode
  in a nested if).

- kEnableLeakDetection only affects BlinkTestController and
  LayoutTestContentBrowserClient so it won't have any effect without
  --run-layout-test switch.

- kEnableFontAntialiasing and kAlwaysUseComplexText only affects
  LayoutTestContentBrowserClient and LayoutTestRenderProcessObserver so
  it won't have any effect without --run-layout-test switch.

BUG=594566

Review URL: https://codereview.chromium.org/1799923002

Cr-Commit-Position: refs/heads/master@{#381330}

Former-commit-id: 756abda6b173d7b698bf43a0726e43eaab8c03dd