content/shell/common/shell_switches.h
@@ -15,6 +15,7 @@ namespace switches {
 extern const char kContentBrowserTest[];
 extern const char kContentShellDataPath[];
 extern const char kCrashDumpsDir[];
+extern const char kExposeInternalsForTesting[];
 extern const char kIsolateSitesForTesting[];
 extern const char kRegisterFontFiles[];
 extern const char kContentShellHostWindowSize[];
